--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "npm run lint && npm run test"
     }
   },
   "lint-staged": {
