--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,6 @@
   "jsxBracketSameLine": true,
   "singleQuote": true,
   "trailingComma": "all",
-  "printWidth": 100
+  "printWidth": 100,
+  "tabWidth": 2
 }
